fix: wordbreak fix for comments on mobile

--- a/app/reset.css
+++ b/app/reset.css
@@ -63,7 +63,7 @@ h5,
 h6,
 a,
 blockquote {
-  overflow-wrap: break-word;
+  overflow-wrap: anywhere;
   hyphens: auto;
 }
 /*
